# Qhyh_Agent

./: .gitignore  AGENTS.md  README.md  debug-canvas-two-refs-disconnect.md  debug-video-ascii-encode-error.md  langgraph-qinghe-prompts.md  run.ps1  start.ps1  农业广告视频MVP迁移方案.md
qinghe-video/: .env.example  .gitignore  README.md  ROADMAP-AI-GENERATION.md  alembic.ini  pyproject.toml  qinghe.db  start.bat  start.ps1  start.sh
qinghe-video/alembic/: env.py
qinghe-video/alembic/versions/: 001_create_users_table.py  002_create_assets_table.py  003_create_canvas_projects.py  004_create_workshop_sessions.py  005_create_conversations.py
qinghe-video/frontend/: app.py  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.js.timestamp-1782719361679-bda0b7581c13.mjs  vite.config.ts
qinghe-video/frontend/_legacy-html/: index.html
qinghe-video/frontend/src/: App.tsx  index.css  main.tsx
qinghe-video/libs/idna-3.18.dist-info/: RECORD
qinghe-video/src/: __init__.py  agent_steps.py  config.py  graph.py  image_generation.py  main.py  models.py  state.py  text_polish.py  topic_generation.py  tts_service.py  video_compose.py  video_generation.py  video_mvp.py
qinghe-video/tests/: conftest.py  conversation_helpers.py  test_assets.py  test_auth.py  test_canvas_models.py  test_canvas_segment.py  test_canvas_storyboard.py  test_conversation_agent.py  test_conversation_agent_api.py  test_conversation_sessions.py  test_graph.py  test_image_generation.py  test_topic.py  test_video_generation.py
(+265 files in other folders)
