[project]
name = "qinghe-video"
version = "0.1.0"
description = "青禾映画 — 农业短视频创作平台 MVP"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.35",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "requests>=2.31",
    "json_repair>=0.30",
    "edge-tts>=6.1.0",
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "frontend*"]
